--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
 six==1.16.0
-scikit_learn==1.2.2
+scikit-learn==1.2.2
 tornado==6.2
 urllib3==1.26.15
 Werkzeug==2.2.3
