--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ cssselect==1.2.0
 dlib==19.24.0
 dnslib==0.9.23
 dnspython==2.3.0
+email-validator==2.0.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 Flask==2.2.3
 Flask-Cors==3.0.10
+Flask-Login==0.6.2
 Flask-PyMongo==2.3.0
+Flask_WTF==1.1.1
 idna==3.4
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
@@ -43,5 +46,6 @@ scikit-learn==1.2.2
 tornado==6.2
 urllib3==1.26.15
 Werkzeug==2.2.3
+WTForms==3.0.1
 xpinyin==0.7.6
 zipp==3.15.0
